5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4424/executions/1674_1100.log
== TEST (2019-04-25 11:36:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 10
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:00) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Micoleaodourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 10
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico-leao-dourado=20
Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Micoleaodourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 10
    Mico-leao-dourado=20
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:37:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 11
    Onca-pintada=50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 11
    Onca-pintada=50
    ^
SyntaxError: can't assign to operator
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:19) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Oncapintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:31) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Oncapintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:38:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Oncapintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
"Mico-leao-dourado"=20
"Onca-pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 11
    "Onca-pintada=50
                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:23) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
"Mico-leao-dourado"=20
"Onca-pintada"=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 10
    "Mico-leao-dourado"=20
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:39:24) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
"Mico-leao-dourado"=20
"Onca-pintada"=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico-leao-dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 10
    "Mico-leao-dourado"=20
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:40:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:40:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:41:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:08) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Micoleaodourado=20
Oncapintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", ced
-- ERROR:
File "XXXX", line 22
    
                         ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:43:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("ENTRADA", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("ENTRADA", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("ENTRADA", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("ENTRADA", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("ENTRADA", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("ENTRADA", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
ENTRADA 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:54) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

2=Tartaruga
5=Garça
10=Arara0
20=Mico_leao_dourado
50=Onca_pintada
100=Garoupa

if(cedula==2):
	print("Entrada", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("Entrada", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("Entrada", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("Entrada", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("Entrada", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("Entrada", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- ERROR:
File "XXXX", line 7
    2=Tartaruga
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:54:37) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada", cedula)
	print("animal", Tartaruga)
elif(cedula==5):
	print("Entrada", cedula)
	print("animal", Garca)
elif(cedula==10):
	print("Entrada", cedula)
	print("animal", Arara)
elif(cedula==20):
	print("Entrada", cedula)
	print("animal", Mico_leao_dourado)
elif(cedula==50):
	print("Entrada", cedula)
	print("animal", Onca_pintada)
elif(cedula==100):
	print("Entrada", cedula)
	print("animal", Garoupa)
else:
	print(Garoupa)
-- OUTPUT:
Entrada 100
animal 100
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:55:32) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada", cedula)
	print("animal", "Tartaruga")
elif(cedula==5):
	print("Entrada", cedula)
	print("animal", "Garca")
elif(cedula==10):
	print("Entrada", cedula)
	print("animal", "Arara")
elif(cedula==20):
	print("Entrada", cedula)
	print("animal", "Mico_leao_dourado")
elif(cedula==50):
	print("Entrada", cedula)
	print("animal", "Onca_pintada")
elif(cedula==100):
	print("Entrada", cedula)
	print("animal", "Garoupa")
else:
	print(Garoupa)
-- OUTPUT:
Entrada 100
animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:55:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada", cedula)
	print("animal", "Tartaruga")
elif(cedula==5):
	print("Entrada", cedula)
	print("animal", "Garca")
elif(cedula==10):
	print("Entrada", cedula)
	print("animal", "Arara")
elif(cedula==20):
	print("Entrada", cedula)
	print("animal", "Mico_leao_dourado")
elif(cedula==50):
	print("Entrada", cedula)
	print("animal", "Onca_pintada")
elif(cedula==100):
	print("Entrada", cedula)
	print("animal", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.134836
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada 100
animal Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada 50
animal Onca_pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:55:39) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada", cedula)
	print("animal", "Tartaruga")
elif(cedula==5):
	print("Entrada", cedula)
	print("animal", "Garca")
elif(cedula==10):
	print("Entrada", cedula)
	print("animal", "Arara")
elif(cedula==20):
	print("Entrada", cedula)
	print("animal", "Mico_leao_dourado")
elif(cedula==50):
	print("Entrada", cedula)
	print("animal", "Onca_pintada")
elif(cedula==100):
	print("Entrada", cedula)
	print("animal", "Garoupa")
else:
	print(Garoupa)
-- OUTPUT:
Entrada 100
animal Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:56:20) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico_leao_dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca_pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- OUTPUT:
Entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:56:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico_leao_dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca_pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.167222
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca_pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:56:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.182355
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:56:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.137856
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:56:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- OUTPUT:
Entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:57:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- OUTPUT:
Entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:57:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.117808
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:57:11) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print(Garoupa)
-- EXECUTION TIME:
0.16258
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
100
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:57:40) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print("Invalido")
-- EXECUTION TIME:
0.132551
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 14:57:42) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print("Invalido")
-- OUTPUT:
Entrada:  100
animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 14:57:49) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("animal: ", "Garoupa")
else:
	print("Invalido")
-- EXECUTION TIME:
0.167324
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
animal:  Onca-pintada
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:00:04) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-26 15:00:09) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- OUTPUT:
Entrada:  100
Animal:  Garoupa
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-26 15:00:10) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo.

cedula=int(input("valor"))

Tartaruga=2
Garça=5
Arara=10
Mico_leao_dourado=20
Onca_pintada=50
Garoupa=100

if(cedula==2):
	print("Entrada: ", cedula)
	print("Animal: ", "Tartaruga")
elif(cedula==5):
	print("Entrada: ", cedula)
	print("Animal: ", "Garca")
elif(cedula==10):
	print("Entrada: ", cedula)
	print("Animal: ", "Arara")
elif(cedula==20):
	print("Entrada: ", cedula)
	print("Animal: ", "Mico-leao-dourado")
elif(cedula==50):
	print("Entrada: ", cedula)
	print("Animal: ", "Onca-pintada")
elif(cedula==100):
	print("Entrada: ", cedula)
	print("Animal: ", "Garoupa")
else:
	print("Entrada: ", cedula)
	print("Animal: " ,"Invalido")
-- EXECUTION TIME:
0.115659
-- TEST CASE 1:
---- input:
100
---- correct output:
Entrada: 100
Animal: Garoupa
---- user output:
Entrada:  100
Animal:  Garoupa
-- TEST CASE 2:
---- input:
7
---- correct output:
Entrada: 7
Animal: Invalido
---- user output:
Entrada:  7
Animal:  Invalido
-- TEST CASE 3:
---- input:
50
---- correct output:
Entrada: 50
Animal: Onca-pintada
---- user output:
Entrada:  50
Animal:  Onca-pintada
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
